[package]
name = "moth-drink-habit"
version = "0.1.0"
edition = "2021"

[lib]
name = "drinklib"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "mothdrinkhabit"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
